# fiducia-telemetry.rs

./: .cli-flags.toml  .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  shell
.github/: README.md  dependabot.yml
.github/workflows/: README.md  ci.yml  cli-flags.yml
.nix/: README.md  flake.nix
scripts/: README.md  with-flags2env.sh
src/: README.md  lib.rs
