# Crate manifest: package metadata and dependencies for the fiducia-telemetry library.
[package]
name = "fiducia-telemetry"
version = "0.1.0"
edition = "2021"
description = "Shared OpenTelemetry + tracing setup for every fiducia.cloud Rust service — one init() call, OTLP export, fmt fallback."

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
fiducia-interfaces = { path = "../fiducia-interfaces/generated/rust" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
